--- a/style.css
+++ b/style.css
@@ -38,3 +38,16 @@
     background-color: #e8f0fe;
     cursor: pointer;
 }
+
+
+
+/* barre de recherche */
+
+#search{
+    display: block;
+
+    border: 1px solid #dadce0;
+    border-radius: 10px;
+
+    
+}
