--- a/style.css
+++ b/style.css
@@ -42,12 +42,59 @@
 
 
 /* barre de recherche */
+.around-search{
+    border: 1px solid #dadce0;
+    width: 530px;
+    height: 50px;
+
+    border-radius: 50px;
+
+    display: flex;
+}
+
 
 #search{
-    display: block;
+    display: flex;
+    flex: 100%;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 100%;
 
-    border: 1px solid #dadce0;
-    border-radius: 10px;
+    border: none;
+   
 
+    width: 430px;
+    height: 38px;
+
+    margin-top: 3px;
+
+}
+.around-search:hover{
+    box-shadow: 0px 0px 7px #dadce0;
+}
+
+.before-after-search{
+    width: 33px;
+    height: 30px;
+
+    padding: 10px;
+}
+
+
+
+/* LOGO */
+.logo-google{
+    width: 272px;
     
+
+    margin: 0 auto;
+}
+
+
+
+/* main */
+.main{
+    margin: 0 auto;
+
+    width: 500px;
 }
