--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     font-size: 13.5px;
 }
 
+
 .button1{
     background-color: #1a73e8;
     color: #FFF;
@@ -15,6 +16,7 @@
     height: 36px;
     margin: 11px 4px;
 
+    z-index: 1000;
 }
 
 .button2{
@@ -26,8 +28,17 @@
     padding: 0px 24px;
     height: 36px;
     margin: 11px 4px;
+
+    z-index: 1000;
 }
 
+
+.buttons {
+    width: 331px;
+    margin: 25px auto;
+
+    z-index: 1000;
+}
 
 /* hover */
 .button1:hover{
@@ -44,12 +55,15 @@
 /* barre de recherche */
 .around-search{
     border: 1px solid #dadce0;
-    width: 530px;
+    background-color: #FFF;
+    width: 580px;
     height: 50px;
 
     border-radius: 50px;
 
     display: flex;
+
+    z-index: 1000;
 }
 
 
@@ -62,39 +76,166 @@
 
     border: none;
    
-
     width: 430px;
     height: 38px;
 
     margin-top: 3px;
-
 }
+
+
+
 .around-search:hover{
     box-shadow: 0px 0px 7px #dadce0;
 }
 
-.before-after-search{
-    width: 33px;
-    height: 30px;
+.before-search{
+    width: 27px;
+    height: 27px;
+
+    padding: 12px 10px 10px 10px;
+}
+.after-search {
+    width: 27px;
+    height: 33px;
 
     padding: 10px;
 }
 
 
-
 /* LOGO */
-.logo-google{
-    width: 272px;
-    
 
-    margin: 0 auto;
+.logo-content {
+    display: block;
+    position: relative;
+    z-index: -1;
 }
 
+.logo-google{
+    width: 365px;
+    margin: 10px 18.5% 30px 18.5%;
+
+}
 
 
 /* main */
 .main{
     margin: 0 auto;
+    position: relative;
+    top: 150px;
+    width: 580px;
+}
 
-    width: 500px;
+
+/* Personal Navbar */
+.personal-navbar {
+    float: right;
+    margin-top: 10px;
+}
+
+
+.personal-navbar a {
+    color: rgb(12, 12, 12);
+    text-decoration: none;
+    position: relative;
+    top: -11px;
+}
+.personal-navbar a,
+.personal-navbar img {
+    padding-left: 15px;
+}
+
+
+
+.personal-navbar a:hover{
+    text-decoration: underline;
+}
+.account-online {
+    width: 35px;
+    padding-right: 20px;
+}
+
+.functions-google {
+    position: relative;
+    top: -2px;
+}
+
+
+/* footer */
+.footer {
+    background-color: #f2f2f2;
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    height: 140px;
+
+    z-index: -1;
+}
+
+.pays,
+.row1 a,
+.row2 a {
+    color: rgb(129, 129, 129);
+
+    text-decoration: none;
+    padding: 15px 0 15px 27px;
+    z-index: 1;
+}
+
+
+.row1 a,
+.row2 a {
+    display: inline-block;
+    padding: 15px 0 10px 27px;
+}
+
+.row1 a:hover,
+.row2 a:hover {
+    text-decoration: underline;
+}
+
+.pays {
+    border: 1px solid #e4e4e4;
+    font-size: 17px;
+}
+
+.row {
+    width: 615px;
+    margin: 0 auto;
+}
+
+.row1, 
+.row2 {
+    text-align: center;
+}
+
+
+@media screen and (min-width: 1150px) {
+
+    .row{
+        width: 100%;
+    }
+    .footer {
+        height: 100px;
+    }
+
+    .row1 {
+        float: left;
+    }
+    .row2 {
+        float: right;
+    }
+
+}
+
+
+
+@media screen and (max-width: 1160px) {
+
+    .main{
+        top: 100px;
+    }
+
 }
