--- a/style.css
+++ b/style.css
@@ -5,23 +5,24 @@
 
 
 .button1{
-    background-color: #1a73e8;
+    background-color: #465bdb;
     color: #FFF;
 
     border-radius: 4px;
    
     border: none;
 
-    padding: 0px 24px;
+    padding: 0px 22.5px;
     height: 36px;
     margin: 11px 4px;
 
     z-index: 1000;
+    transition: .3s;
 }
 
 .button2{
     background-color: #FFF;
-    color: #1a73e8;
+    color: #465bdb;
     border: 1px solid #dadce0;
 
     border-radius: 4px;
@@ -30,6 +31,7 @@
     margin: 11px 4px;
 
     z-index: 1000;
+    transition: .3s;
 }
 
 
@@ -42,11 +44,11 @@
 
 /* hover */
 .button1:hover{
-    background-color: #1561c4;
+    background-color: #262b4d;
     cursor: pointer;
 }
 .button2:hover{
-    background-color: #e8f0fe;
+    background-color: #a9afda33;
     cursor: pointer;
 }
 
@@ -157,8 +159,15 @@
 .functions-google {
     position: relative;
     top: -2px;
+    opacity: .5;
 }
 
+
+.functions-google:hover {
+    opacity: 1;
+    transition: opacity .3s;
+    cursor: pointer; 
+}
 
 /* footer */
 .footer {
